--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
+
 .body_about{
     background-color: rgb(84, 145, 124);
+}
+.about_heading{
+    color: white;
+    margin-left: 30px;
+    height: 600px;
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/e/eb/3D_medical_animation_corona_virus.jpg");
+    background-repeat: no-repeat;
+  background-size: 100%,100%;
+    
 }
 .about{
     text-align: center;
