--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 .about_heading{
     color: white;
     margin-left: 30px;
-    height: 600px;
+    max-width:100%;
+    height:600px;
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/e/eb/3D_medical_animation_corona_virus.jpg");
     background-repeat: no-repeat;
   background-size: 100%,100%;
